--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,9 +3,11 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@testing-library/jest-dom": "^5.8.0",
-        "@testing-library/react": "^10.0.4",
-        "@testing-library/user-event": "^10.3.5",
+        "@material-ui/core": "^4.10.1",
+        "@material-ui/icons": "^4.9.1",
+        "@testing-library/jest-dom": "^5.9.0",
+        "@testing-library/react": "^10.2.1",
+        "@testing-library/user-event": "^11.3.1",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-router-dom": "^5.2.0",
