--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,9 +5,9 @@
     "dependencies": {
         "@material-ui/core": "^4.11.0",
         "@material-ui/icons": "^4.9.1",
-        "@testing-library/jest-dom": "^5.11.1",
+        "@testing-library/jest-dom": "^5.11.2",
         "@testing-library/react": "^10.4.7",
-        "@testing-library/user-event": "^12.0.11",
+        "@testing-library/user-event": "^12.0.17",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-router-dom": "^5.2.0",
@@ -33,5 +33,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "prettier": "^2.0.5"
     }
 }
