--- a/server/package.json
+++ b/server/package.json
@@ -9,13 +9,17 @@
     },
     "dependencies": {
         "body-parser": "^1.19.0",
+        "cookie-parser": "^1.4.5",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
-        "mongoose": "^5.9.25",
+        "helmet": "^3.23.3",
+        "mongoose": "^5.9.26",
         "morgan": "^1.10.0"
     },
     "devDependencies": {
-        "nodemon": "^2.0.4"
+        "eslint": "^7.5.0",
+        "nodemon": "^2.0.4",
+        "prettier": "^2.0.5"
     }
 }
