--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
     "main": "index.js",
     "license": "MIT",
     "scripts": {
-        "start": "nodemon index.js",
+        "start": "nodemon -r esm index.js",
         "build": "react-scripts build"
     },
     "dependencies": {
@@ -12,6 +12,7 @@
         "cookie-parser": "^1.4.5",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
+        "esm": "^3.2.25",
         "express": "^4.17.1",
         "helmet": "^3.23.3",
         "mongoose": "^5.9.26",
