--- a/server/package.json
+++ b/server/package.json
@@ -11,15 +11,19 @@
         "body-parser": "^1.19.0",
         "cookie-parser": "^1.4.5",
         "cors": "^2.8.5",
+        "cross-env": "^7.0.2",
         "dotenv": "^8.2.0",
         "esm": "^3.2.25",
         "express": "^4.17.1",
+        "express-session": "^1.17.1",
         "helmet": "^3.23.3",
-        "mongoose": "^5.9.26",
-        "morgan": "^1.10.0"
+        "mongoose": "^5.9.27",
+        "morgan": "^1.10.0",
+        "passport": "^0.4.1",
+        "pm2": "^4.4.0"
     },
     "devDependencies": {
-        "eslint": "^7.5.0",
+        "eslint": "^7.6.0",
         "nodemon": "^2.0.4",
         "prettier": "^2.0.5"
     }
