--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,10 @@
         "build": "react-scripts build"
     },
     "dependencies": {
+        "axios": "^0.19.2",
+        "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
+        "concurrently": "^5.2.0",
         "cookie-parser": "^1.4.5",
         "cors": "^2.8.5",
         "cross-env": "^7.0.2",
@@ -17,10 +20,15 @@
         "express": "^4.17.1",
         "express-session": "^1.17.1",
         "helmet": "^3.23.3",
+        "is-empty": "^1.2.0",
+        "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.9.27",
         "morgan": "^1.10.0",
+        "multer": "^1.4.2",
         "passport": "^0.4.1",
-        "pm2": "^4.4.0"
+        "passport-jwt": "^4.0.0",
+        "pm2": "^4.4.0",
+        "validator": "^13.1.1"
     },
     "devDependencies": {
         "eslint": "^7.6.0",
