--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,14 +5,16 @@
     "dependencies": {
         "@material-ui/core": "^4.11.0",
         "@material-ui/icons": "^4.9.1",
-        "@testing-library/jest-dom": "^5.11.2",
+        "@testing-library/jest-dom": "^5.11.3",
         "@testing-library/react": "^10.4.8",
-        "@testing-library/user-event": "^12.1.0",
+        "@testing-library/user-event": "^12.1.1",
         "axios": "^0.19.2",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-router-dom": "^5.2.0",
-        "react-scripts": "3.4.1"
+        "react-scripts": "3.4.2",
+        "styled-components": "^5.1.1",
+        "styled-reset": "^4.2.2"
     },
     "scripts": {
         "start": "react-scripts start",
