--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "FSharp.fsacRuntime": "net",
-    "FSharp.suggestGitignore": false
+    "FSharp.suggestGitignore": false,
+    "svn.ignoreMissingSvnWarning": true
 }
