--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,18 +3,21 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@material-ui/core": "^4.11.0",
-        "@material-ui/icons": "^4.9.1",
-        "@testing-library/jest-dom": "^5.11.4",
-        "@testing-library/react": "^11.0.4",
-        "@testing-library/user-event": "^12.1.5",
-        "axios": "^0.20.0",
-        "react": "^16.13.1",
-        "react-dom": "^16.13.1",
+        "@material-ui/core": "^4.11.4",
+        "@material-ui/icons": "^4.11.2",
+        "@testing-library/jest-dom": "^5.12.0",
+        "@testing-library/react": "^11.2.6",
+        "@testing-library/user-event": "^13.1.8",
+        "axios": "^0.21.1",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-hook-form": "7.5.1",
         "react-router-dom": "^5.2.0",
-        "react-scripts": "3.4.3",
-        "styled-components": "^5.2.0",
-        "styled-reset": "^4.2.3"
+        "react-scripts": "4.0.3",
+        "styled-components": "^5.3.0",
+        "styled-reset": "^4.3.4",
+        "tailwindcss": "2.1.2",
+        "validator": "^13.6.0"
     },
     "scripts": {
         "start": "react-scripts start",
@@ -39,6 +42,6 @@
         ]
     },
     "devDependencies": {
-        "prettier": "^2.1.2"
+        "prettier": "^2.3.0"
     }
 }
