--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,11 @@
         "@testing-library/react": "^11.2.7",
         "@testing-library/user-event": "^13.1.9",
         "axios": "^0.21.1",
+        "classnames": "^2.3.1",
+        "moment": "^2.29.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
-        "react-hook-form": "7.6.5",
+        "react-hook-form": "7.7.1",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
         "styled-components": "^5.3.0",
