--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,15 +5,17 @@
     "dependencies": {
         "@material-ui/core": "^4.11.4",
         "@material-ui/icons": "^4.11.2",
-        "@testing-library/jest-dom": "^5.13.0",
+        "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^11.2.7",
         "@testing-library/user-event": "^13.1.9",
         "axios": "^0.21.1",
+        "babel-eslint": "^10.1.0",
         "classnames": "^2.3.1",
+        "lodash": "^4.17.21",
         "moment": "^2.29.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
-        "react-hook-form": "7.8.3",
+        "react-hook-form": "7.8.7",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
         "styled-components": "^5.3.0",
