--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,20 +3,25 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@material-ui/core": "^4.11.4",
+        "@material-ui/core": "^4.12.1",
         "@material-ui/icons": "^4.11.2",
-        "@testing-library/jest-dom": "^5.12.0",
-        "@testing-library/react": "^11.2.7",
+        "@testing-library/jest-dom": "^5.14.1",
+        "@testing-library/react": "^12.0.0",
         "@testing-library/user-event": "^13.1.9",
         "axios": "^0.21.1",
+        "babel-eslint": "^10.1.0",
+        "classnames": "^2.3.1",
+        "lodash": "^4.17.21",
+        "moment": "^2.29.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
-        "react-hook-form": "7.6.5",
+        "react-hook-form": "7.11.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
         "styled-components": "^5.3.0",
         "styled-reset": "^4.3.4",
-        "tailwindcss": "2.1.2",
+        "tailwindcss": "2.2.4",
+        "uuid": "^8.3.2",
         "validator": "^13.6.0"
     },
     "scripts": {
@@ -42,6 +47,6 @@
         ]
     },
     "devDependencies": {
-        "prettier": "^2.3.0"
+        "prettier": "^2.3.2"
     }
 }
