--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,11 +16,15 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-hook-form": "7.11.1",
+        "react-redux": "^7.2.4",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
+        "redux": "^4.1.0",
+        "redux-devtools-extension": "^2.13.9",
+        "redux-thunk": "^2.3.0",
         "styled-components": "^5.3.0",
         "styled-reset": "^4.3.4",
-        "tailwindcss": "2.2.4",
+        "tailwindcss": "2.2.7",
         "uuid": "^8.3.2",
         "validator": "^13.6.0"
     },
