--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -3,30 +3,31 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@date-io/moment": "^2.11.0",
-        "@material-ui/core": "^4.12.2",
+        "@date-io/moment": "1.x",
+        "@material-ui/core": "^4.12.3",
         "@material-ui/icons": "^4.11.2",
         "@material-ui/pickers": "^3.3.10",
         "@testing-library/jest-dom": "^5.14.1",
-        "@testing-library/react": "^12.0.0",
-        "@testing-library/user-event": "^13.2.0",
-        "axios": "^0.21.1",
+        "@testing-library/react": "^12.1.2",
+        "@testing-library/user-event": "^13.5.0",
+        "axios": "^0.24.0",
         "babel-eslint": "^10.1.0",
+        "browserslist": "^4.17.5",
         "classnames": "^2.3.1",
         "lodash": "^4.17.21",
         "moment": "^2.29.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
-        "react-hook-form": "7.11.1",
-        "react-redux": "^7.2.4",
-        "react-router-dom": "^5.2.0",
+        "react-hook-form": "7.18.0",
+        "react-redux": "^7.2.6",
+        "react-router-dom": "^5.3.0",
         "react-scripts": "4.0.3",
-        "redux": "^4.1.0",
+        "redux": "^4.1.2",
         "redux-devtools-extension": "^2.13.9",
-        "redux-thunk": "^2.3.0",
-        "styled-components": "^5.3.0",
+        "redux-thunk": "^2.4.0",
+        "styled-components": "^5.3.3",
         "styled-reset": "^4.3.4",
-        "tailwindcss": "2.2.7",
+        "tailwindcss": "2.2.17",
         "uuid": "^8.3.2",
         "validator": "^13.6.0"
     },
@@ -53,6 +54,6 @@
         ]
     },
     "devDependencies": {
-        "prettier": "^2.3.2"
+        "prettier": "^2.4.1"
     }
 }
