--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -3,8 +3,8 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@material-ui/core": "^4.12.3",
         "@date-io/moment": "1.x",
+        "@material-ui/core": "^4.12.3",
         "@material-ui/icons": "^4.11.2",
         "@material-ui/pickers": "^3.3.10",
         "@testing-library/jest-dom": "^5.14.1",
@@ -24,6 +24,7 @@
         "react-scripts": "4.0.3",
         "redux": "^4.1.2",
         "redux-devtools-extension": "^2.13.9",
+        "redux-persist": "^6.0.0",
         "redux-thunk": "^2.4.0",
         "styled-components": "^5.3.3",
         "styled-reset": "^4.3.4",
@@ -53,6 +54,9 @@
             "last 1 safari version"
         ]
     },
+    "include": [
+        "src"
+    ],
     "devDependencies": {
         "prettier": "^2.4.1"
     }
