--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -30,6 +30,7 @@
         "styled-components": "^5.3.3",
         "styled-reset": "^4.3.4",
         "tailwindcss": "2.2.17",
+        "typeface-montserrat": "^1.1.13",
         "uuid": "^8.3.2",
         "validator": "^13.6.0"
     },
