--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -23,10 +23,12 @@
         "react-redux": "^7.2.6",
         "react-router-dom": "^5.3.0",
         "react-scripts": "4.0.3",
+        "react-slick": "^0.28.1",
         "redux": "^4.1.2",
         "redux-devtools-extension": "^2.13.9",
         "redux-persist": "^6.0.0",
         "redux-thunk": "^2.4.0",
+        "slick-carousel": "^1.8.1",
         "styled-components": "^5.3.3",
         "styled-reset": "^4.3.4",
         "tailwindcss": "2.2.17",
@@ -35,9 +37,9 @@
         "validator": "^13.6.0"
     },
     "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
+        "start": "react-scripts start --openssl-legacy-provider",
+        "build": "react-scripts build --openssl-legacy-provider",
+        "test": "react-scripts test --openssl-legacy-provider",
         "eject": "react-scripts eject"
     },
     "proxy": "http://localhost:5000",
