--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -39,7 +39,7 @@
         "validator": "^13.6.0"
     },
     "scripts": {
-        "start": "HTTPS=true react-scripts start --openssl-legacy-provider",
+        "start": "HTTPS=true react-scripts  --openssl-legacy-provider start",
         "build": "react-scripts build --openssl-legacy-provider",
         "test": "react-scripts test --openssl-legacy-provider",
         "eject": "react-scripts eject"
