--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -4,6 +4,9 @@
     "private": true,
     "dependencies": {
         "@date-io/moment": "1.x",
+        "@fullcalendar/core": "^5.10.1",
+        "@fullcalendar/daygrid": "^5.10.1",
+        "@fullcalendar/react": "^5.10.1",
         "@material-ui/core": "^4.12.3",
         "@material-ui/icons": "^4.11.2",
         "@material-ui/lab": "^4.0.0-alpha.60",
