--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,7 +15,6 @@
         "@testing-library/react": "^12.1.2",
         "@testing-library/user-event": "^13.5.0",
         "axios": "^0.24.0",
-        "babel-eslint": "^10.1.0",
         "browserslist": "^4.17.5",
         "classnames": "^2.3.1",
         "lodash": "^4.17.21",
@@ -68,6 +67,11 @@
         "src"
     ],
     "devDependencies": {
+        "eslint": "^8.14.0",
+        "eslint-config-airbnb": "^19.0.4",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-prettier": "^4.0.0",
+        "install-peerdeps": "^3.0.3",
         "prettier": "^2.4.1"
     }
 }
