--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "concurrently": "^4.1.2"
+        "concurrently": "^4.1.2",
+        "jshint": "^2.13.4"
     }
 }
