--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -3,43 +3,43 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@date-io/moment": "1.x",
-        "@fullcalendar/core": "^5.10.1",
-        "@fullcalendar/daygrid": "^5.10.1",
-        "@fullcalendar/react": "^5.10.1",
-        "@material-ui/core": "^4.12.3",
-        "@material-ui/icons": "^4.11.2",
-        "@material-ui/lab": "^4.0.0-alpha.60",
+        "@date-io/moment": "2.x",
+        "@fullcalendar/core": "^5.11.2",
+        "@fullcalendar/daygrid": "^5.11.2",
+        "@fullcalendar/react": "^5.11.2",
+        "@material-ui/core": "^4.12.4",
+        "@material-ui/icons": "^4.11.3",
+        "@material-ui/lab": "^4.0.0-alpha.61",
         "@material-ui/pickers": "^3.3.10",
-        "@testing-library/jest-dom": "^5.14.1",
-        "@testing-library/react": "^12.1.2",
-        "@testing-library/user-event": "^13.5.0",
-        "axios": "^0.24.0",
-        "browserslist": "^4.17.5",
+        "@testing-library/jest-dom": "^5.16.5",
+        "@testing-library/react": "^13.3.0",
+        "@testing-library/user-event": "^14.4.3",
+        "axios": "^0.27.2",
+        "browserslist": "^4.21.3",
         "classnames": "^2.3.1",
         "lodash": "^4.17.21",
-        "moment": "^2.29.1",
+        "moment": "^2.29.4",
         "postcss-normalize": "^10.0.1",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "react-facebook-login": "^4.1.1",
         "react-google-login": "^5.2.2",
-        "react-hook-form": "7.18.0",
-        "react-redux": "^7.2.6",
-        "react-router-dom": "^5.3.0",
-        "react-scripts": "5.0.0",
-        "react-slick": "^0.28.1",
-        "redux": "^4.1.2",
+        "react-hook-form": "7.34.0",
+        "react-redux": "^8.0.2",
+        "react-router-dom": "^6.3.0",
+        "react-scripts": "5.0.1",
+        "react-slick": "^0.29.0",
+        "redux": "^4.2.0",
         "redux-devtools-extension": "^2.13.9",
         "redux-persist": "^6.0.0",
-        "redux-thunk": "^2.4.0",
+        "redux-thunk": "^2.4.1",
         "slick-carousel": "^1.8.1",
-        "styled-components": "^5.3.3",
-        "styled-reset": "^4.3.4",
-        "tailwindcss": "2.2.17",
+        "styled-components": "^5.3.5",
+        "styled-reset": "^4.4.2",
+        "tailwindcss": "3.1.8",
         "typeface-montserrat": "^1.1.13",
         "uuid": "^8.3.2",
-        "validator": "^13.6.0"
+        "validator": "^13.7.0"
     },
     "scripts": {
         "start": "HTTPS=true  react-scripts start",
@@ -48,9 +48,7 @@
         "eject": "react-scripts eject"
     },
     "proxy": "http://localhost:3001",
-    "eslintConfig": {
-        "extends": "react-app"
-    },
+    "eslintConfig": {},
     "browserslist": {
         "production": [
             ">0.2%",
@@ -67,11 +65,11 @@
         "src"
     ],
     "devDependencies": {
-        "eslint": "^8.14.0",
+        "eslint": "^8.21.0",
         "eslint-config-airbnb": "^19.0.4",
         "eslint-config-prettier": "^8.5.0",
-        "eslint-plugin-prettier": "^4.0.0",
+        "eslint-plugin-prettier": "^4.2.1",
         "install-peerdeps": "^3.0.3",
-        "prettier": "^2.4.1"
+        "prettier": "^2.7.1"
     }
 }
