--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -3,7 +3,11 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@date-io/date-fns": "^2.15.0",
+        "@date-io/luxon": "^2.15.0",
         "@date-io/moment": "2.x",
+        "@emotion/react": "^11.10.0",
+        "@emotion/styled": "^11.10.0",
         "@fullcalendar/core": "^5.11.2",
         "@fullcalendar/daygrid": "^5.11.2",
         "@fullcalendar/react": "^5.11.2",
@@ -11,12 +15,16 @@
         "@material-ui/icons": "^4.11.3",
         "@material-ui/lab": "^4.0.0-alpha.61",
         "@material-ui/pickers": "^3.3.10",
+        "@mui/lab": "^5.0.0-alpha.95",
+        "@mui/material": "^5.10.1",
+        "@mui/x-date-pickers": "^5.0.0-beta.6",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.3.0",
         "@testing-library/user-event": "^14.4.3",
         "axios": "^0.27.2",
         "browserslist": "^4.21.3",
         "classnames": "^2.3.1",
+        "date-fns": "^2.29.2",
         "lodash": "^4.17.21",
         "moment": "^2.29.4",
         "postcss-normalize": "^10.0.1",
@@ -24,7 +32,7 @@
         "react-dom": "^18.2.0",
         "react-facebook-login": "^4.1.1",
         "react-google-login": "^5.2.2",
-        "react-hook-form": "7.34.0",
+        "react-hook-form": "7.34.2",
         "react-redux": "^8.0.2",
         "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.1",
@@ -65,7 +73,7 @@
         "src"
     ],
     "devDependencies": {
-        "eslint": "^8.21.0",
+        "eslint": "^8.22.0",
         "eslint-config-airbnb": "^19.0.4",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.2.1",
