--- a/Server/package.json
+++ b/Server/package.json
@@ -28,6 +28,7 @@
         "passport": "^0.6.0",
         "passport-jwt": "^4.0.0",
         "pm2": "^5.2.0",
+        "request": "^2.88.2",
         "validator": "^13.7.0"
     },
     "devDependencies": {
