--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,7 +10,9 @@
         "@emotion/styled": "^11.10.4",
         "@fullcalendar/core": "^5.11.3",
         "@fullcalendar/daygrid": "^5.11.3",
+        "@fullcalendar/interaction": "^5.11.3",
         "@fullcalendar/react": "^5.11.2",
+        "@fullcalendar/timegrid": "^5.11.3",
         "@material-ui/core": "^4.12.4",
         "@material-ui/icons": "^4.11.3",
         "@material-ui/lab": "^4.0.0-alpha.61",
