--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,24 +17,26 @@
         "@material-ui/icons": "^4.11.3",
         "@material-ui/lab": "^4.0.0-alpha.61",
         "@material-ui/pickers": "^3.3.10",
-        "@mui/lab": "^5.0.0-alpha.97",
-        "@mui/material": "^5.10.3",
-        "@mui/x-date-pickers": "^5.0.0-beta.7",
+        "@mui/lab": "^5.0.0-alpha.98",
+        "@mui/material": "^5.10.4",
+        "@mui/x-date-pickers": "^5.0.1",
         "@testing-library/jest-dom": "^5.16.5",
-        "@testing-library/react": "^13.3.0",
+        "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^14.4.3",
         "axios": "^0.27.2",
         "browserslist": "^4.21.3",
+        "chart.js": "^3.9.1",
         "classnames": "^2.3.1",
         "date-fns": "^2.29.2",
         "lodash": "^4.17.21",
         "moment": "^2.29.4",
         "postcss-normalize": "^10.0.1",
         "react": "^18.2.0",
+        "react-chartjs-2": "^4.3.1",
         "react-dom": "^18.2.0",
         "react-facebook-login": "^4.1.1",
         "react-google-login": "^5.2.2",
-        "react-hook-form": "7.34.2",
+        "react-hook-form": "7.35.0",
         "react-redux": "^8.0.2",
         "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.1",
@@ -48,7 +50,7 @@
         "styled-reset": "^4.4.2",
         "tailwindcss": "3.1.8",
         "typeface-montserrat": "^1.1.13",
-        "uuid": "^8.3.2",
+        "uuid": "^9.0.0",
         "validator": "^13.7.0"
     },
     "scripts": {
@@ -75,7 +77,7 @@
         "src"
     ],
     "devDependencies": {
-        "eslint": "^8.22.0",
+        "eslint": "^8.23.0",
         "eslint-config-airbnb": "^19.0.4",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.2.1",
