--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -30,6 +30,7 @@
         "date-fns": "^2.29.2",
         "lodash": "^4.17.21",
         "moment": "^2.29.4",
+        "node-sass": "^7.0.3",
         "postcss-normalize": "^10.0.1",
         "react": "^18.2.0",
         "react-chartjs-2": "^4.3.1",
