--- a/Server/package.json
+++ b/Server/package.json
@@ -8,13 +8,13 @@
         "build": "react-scripts build"
     },
     "dependencies": {
-        "axios": "^0.27.2",
+        "axios": "^1.1.2",
         "bcryptjs": "^2.4.3",
-        "body-parser": "^1.20.0",
+        "body-parser": "^1.20.1",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "cross-env": "^7.0.3",
-        "dotenv": "^16.0.2",
+        "dotenv": "^16.0.3",
         "esm": "^3.2.25",
         "express": "^4.18.1",
         "express-session": "^1.17.3",
@@ -22,17 +22,19 @@
         "helmet": "^6.0.0",
         "is-empty": "^1.2.0",
         "jsonwebtoken": "^8.5.1",
-        "mongoose": "^6.6.2",
+        "mongoose": "^6.6.5",
         "morgan": "^1.10.0",
         "multer": "^1.4.3",
+        "nodemailer": "^6.8.0",
         "passport": "^0.6.0",
         "passport-jwt": "^4.0.0",
         "pm2": "^5.2.0",
+        "qrcode": "^1.5.1",
         "request": "^2.88.2",
         "validator": "^13.7.0"
     },
     "devDependencies": {
-        "eslint": "^8.24.0",
+        "eslint": "^8.25.0",
         "nodemon": "^2.0.20",
         "prettier": "^2.7.1"
     }
